--- a/view/style.scss
+++ b/view/style.scss
@@ -59,7 +59,7 @@ h3 { font-size: 28px; }
 .colorPrint {
 	color: transparent;
 	/* background-image: linear-gradient(to right , #f00,rgb(255, 123, 0),#ff0,#0f0,#0ff,#00f,rgb(204, 0, 255),rgb(255, 0, 200),#f00,rgb(255, 123, 0)); */
-	background-image: linear-gradient(to right, #c28aff, #bf00ff, #8400ff, #47159d, #1900ff, #008cff, #00e5ff, #c28aff, #bf00ff);
+	background-image: linear-gradient(to right, #c28aff, #bf00ff, #8400ff, #4700c1, #1900ff, #008cff, #00e5ff, #c28aff, #bf00ff);
 	-webkit-background-clip: text;
 	
 	-webkit-text-fill-color: transparent;
@@ -172,6 +172,18 @@ hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity
 	background: linear-gradient(rgba(255, 255, 255, 0.6),rgba(0, 0, 0, 0.8));
 	
 }
+
+.overlayGradientColor{  
+	/* background: no-repeat center right fixed; */
+	height: 100%; 
+	width: 100%;
+	left: 0px; 
+	right: 0px; 
+	/* z-index: 2;  */
+	// background-attachment: fixed;
+	background: linear-gradient(131deg, rgba(186, 186, 186, 0.01) 0%, rgba(186, 186, 186, 0.01) 16.667%,rgba(192, 192, 192, 0.01) 16.667%, rgba(192, 192, 192, 0.01) 33.334%,rgba(48, 48, 48, 0.01) 33.334%, rgba(48, 48, 48, 0.01) 50.001000000000005%,rgba(33, 33, 33, 0.01) 50.001%, rgba(33, 33, 33, 0.01) 66.668%,rgba(182, 182, 182, 0.01) 66.668%, rgba(182, 182, 182, 0.01) 83.33500000000001%,rgba(211, 211, 211, 0.01) 83.335%, rgba(211, 211, 211, 0.01) 100.002%),linear-gradient(148deg, rgba(48, 48, 48, 0.01) 0%, rgba(48, 48, 48, 0.01) 16.667%,rgba(178, 178, 178, 0.01) 16.667%, rgba(178, 178, 178, 0.01) 33.334%,rgba(192, 192, 192, 0.01) 33.334%, rgba(192, 192, 192, 0.01) 50.001000000000005%,rgba(237, 237, 237, 0.01) 50.001%, rgba(237, 237, 237, 0.01) 66.668%,rgba(194, 194, 194, 0.01) 66.668%, rgba(194, 194, 194, 0.01) 83.33500000000001%,rgba(227, 227, 227, 0.01) 83.335%, rgba(227, 227, 227, 0.01) 100.002%),linear-gradient(138deg, rgba(146, 146, 146, 0.03) 0%, rgba(146, 146, 146, 0.03) 25%,rgba(33, 33, 33, 0.03) 25%, rgba(33, 33, 33, 0.03) 50%,rgba(46, 46, 46, 0.03) 50%, rgba(46, 46, 46, 0.03) 75%,rgba(172, 172, 172, 0.03) 75%, rgba(172, 172, 172, 0.03) 100%),linear-gradient(38deg, rgba(3, 3, 3, 0.03) 0%, rgba(3, 3, 3, 0.03) 16.667%,rgba(28, 28, 28, 0.03) 16.667%, rgba(28, 28, 28, 0.03) 33.334%,rgba(236, 236, 236, 0.03) 33.334%, rgba(236, 236, 236, 0.03) 50.001000000000005%,rgba(3, 3, 3, 0.03) 50.001%, rgba(3, 3, 3, 0.03) 66.668%,rgba(207, 207, 207, 0.03) 66.668%, rgba(207, 207, 207, 0.03) 83.33500000000001%,rgba(183, 183, 183, 0.03) 83.335%, rgba(183, 183, 183, 0.03) 100.002%),linear-gradient(145deg, rgba(20, 20, 20, 0.02) 0%, rgba(20, 20, 20, 0.02) 20%,rgba(4, 4, 4, 0.02) 20%, rgba(4, 4, 4, 0.02) 40%,rgba(194, 194, 194, 0.02) 40%, rgba(194, 194, 194, 0.02) 60%,rgba(34, 34, 34, 0.02) 60%, rgba(34, 34, 34, 0.02) 80%,rgba(71, 71, 71, 0.02) 80%, rgba(71, 71, 71, 0.02) 100%),linear-gradient(78deg, rgba(190, 190, 190, 0.02) 0%, rgba(190, 190, 190, 0.02) 20%,rgba(95, 95, 95, 0.02) 20%, rgba(95, 95, 95, 0.02) 40%,rgba(71, 71, 71, 0.02) 40%, rgba(71, 71, 71, 0.02) 60%,rgba(7, 7, 7, 0.02) 60%, rgba(7, 7, 7, 0.02) 80%,rgba(130, 130, 130, 0.02) 80%, rgba(130, 130, 130, 0.02) 100%),linear-gradient(293deg, rgba(213, 213, 213, 0.03) 0%, rgba(213, 213, 213, 0.03) 20%,rgba(220, 220, 220, 0.03) 20%, rgba(220, 220, 220, 0.03) 40%,rgba(146, 146, 146, 0.03) 40%, rgba(146, 146, 146, 0.03) 60%,rgba(57, 57, 57, 0.03) 60%, rgba(57, 57, 57, 0.03) 80%,rgba(120, 120, 120, 0.03) 80%, rgba(120, 120, 120, 0.03) 100%),linear-gradient(90deg, rgb(228, 109, 255),rgb(125, 38, 255))
+}
+
 .jumbotron .container { position: relative; top: 25%; z-index: 4; text-align: center; }
 .jumbotron .container > * { text-align: center; color: #FFFFFF; }
 .jumbotron .container h1 { padding-bottom: 25px; border-bottom: 1px solid; border-bottom-color: rgb(255, 255, 255); display: inline-block; }
@@ -205,6 +217,43 @@ hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 }
 
+.topShadow {
+	display: block;
+	position: absolute;
+	// z-index: 1000;
+	height: 10%; 
+	width: 100%;
+	left: 0px; 
+	top: 0px; 
+	z-index: 3;
+	background: linear-gradient(rgba(0, 0, 0, 0.45),transparent);
+}
+
+.rightShadow {
+	display: block;
+	position: absolute;
+	// z-index: 1000;
+	height: 100%; 
+	width: 5%;
+	left: 95%; 
+	top: 0px; 
+	z-index: 3;
+	background: linear-gradient(to left, rgba(0, 0, 0, 0.45),transparent);
+}
+
+.leftShadow {
+	display: block;
+	position: absolute;
+	// z-index: 1000;
+	height: 100%; 
+	width: 5%;
+	left: 0px; 
+	top: 0px; 
+	z-index: 3;
+	background: linear-gradient(to right, rgba(0, 0, 0, 0.45), transparent);
+}
+
+
 .shadowMiddle {
 	box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.3), 0 0px 20px 0 rgba(0, 0, 0, 0.3);
 }
@@ -235,6 +284,15 @@ hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity
 .fixed .navbar  { position: fixed; top: 60px; }
 
 .background-white {z-index: 5; background: #FFFFFF; }
+.background-whiteFancy {
+	height: 100%; 
+	width: 100%;
+	left: 0px; 
+	right: 0px; 
+	/* z-index: 2;  */
+	// background-attachment: fixed;
+	background: repeating-linear-gradient(199deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(78deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(277deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(18deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(91deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(348deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(334deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(261deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),repeating-linear-gradient(21deg, rgba(0,0,0,0.03) 0px, rgba(0,0,0,0.03) 1px,transparent 1px, transparent 31px,rgba(0,0,0,0.03) 31px, rgba(0,0,0,0.03) 32px,transparent 32px, transparent 92px),linear-gradient(90deg, hsl(83,0%,100%),hsl(83,0%,100%))
+}
 .background-lightgray {z-index: 5; background: rgb(126, 126, 126); }
 .background-gray {z-index: 5; background: #3d3c3c; }
 .background-black {z-index: 5; background: #000000; }
@@ -262,9 +320,276 @@ hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity
     -o-transition: all 0.3s;
     transition: all 0.3s;
 }
+
+#abilities .row > div { margin-bottom: 20px; display: block;}
+
 #abilities ul > li .ability-score .glyphicon.filled { color: #c28aff; }
 
 #abilities ul > li:hover .ability-score .glyphicon { margin-left: 2px; } 
+
+
+// %center {
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+//   }
+  
+//   * {
+// 	margin: 0;
+// 	padding: 0;
+// 	font-family: 'Poppins', 'Roboto', sans-serif;
+//   }
+  
+//   body {
+// 	@extend %center;
+// 	min-height: 100vh;
+// 	background: linear-gradient(45deg, #333333, #5a5454);
+//   }
+  
+  .containerC {
+	position: relative;
+	// width: 960px;
+
+	// trouble makers >
+	// display: flex;
+	// justify-content: space-around;
+	// trouble makers ^
+
+	// display: flex;
+	// justify-content: center;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+	// font-family: 'Poppins', 'Roboto', sans-serif;
+	min-height: 100vh;
+	// background: linear-gradient(45deg, #333333, #5a5454);
+
+	.card {
+	//   @extend %center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	  position: relative;
+	//   width: 250px;
+	  height: 330px;
+	  border-radius: 10px;
+	  background-color: rgba(0,0,0,0.5);
+	  cursor: pointer;
+	  text-align: center;
+	  overflow: hidden;
+	  transition: 0.5s ease;
+	  
+	  &:hover {
+		transform: translatey(-15px);
+		box-shadow: 0 15px 30px rgba(0,0,0,0.5);
+		
+		.number {
+		  h2 {
+			color: #fff;
+			font-size: 50px;
+			
+			span {
+			  color: #fff;
+			}
+		  }
+		}
+		
+		h3 {
+		  color: #fff;
+		}
+	  }
+	  
+	  &:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: -50%;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(255,255,255,0.03);
+		pointer-events: none;
+	  }
+	}
+	
+	.percent {
+	  position: relative;
+	  width: 150px;
+	  height: 150px;
+	  border-radius: 50%;
+	  box-shadow: inset 0 0 50px #000;
+	  background-color: #222;
+	  z-index: 1;
+	  
+	  h3 {
+		margin-top: 16px;
+		color: #777;
+		font-size: 22px;
+		transition: 0.5s ease;
+	  }
+	  
+	  .number {
+		// @extend %center;
+		display: flex;
+	justify-content: center;
+	align-items: center;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 50%;
+		
+		h2 {
+		  color: #777;
+		  font-size: 44px;
+		  transition: 0.5s ease;
+		  
+		  span {
+			color: #777;
+			padding-left: 3px;
+			font-size: 24px;
+			transition: 0.5s ease;
+		  }
+		}
+	  }
+	  
+	  svg {
+		position: relative;
+		width: 150px;
+		height: 150px;
+		transform: rotate(-85deg);
+		
+		circle {
+		  width: 100%;
+		  height: 100%;
+		  fill: none;
+		  stroke: #191919;
+		  stroke-width: 10;
+		  stroke-linecap: round;
+		  transform: translate(5px, 5px);
+		  
+		  &:nth-child(2) {
+			stroke-dasharray: 440;
+			stroke-dashoffset: 440;
+		  }
+		}
+	  }
+	}
+	.row {
+		&:nth-child(1) {
+			.col-md-3{
+				margin-right: auto;
+				margin-left: auto;
+				&:nth-child(1) {
+				.card {
+					svg {
+					  circle {
+						&:nth-child(2) {
+						  stroke-dashoffset: calc(440px - (440px * 85) / 100);
+						  stroke: #63e2ff;
+						}
+					  }
+					}
+				  }
+				}
+				
+				&:nth-child(2) {
+				.card {			
+					  svg {
+						circle {
+						&:nth-child(2) {
+							stroke-dashoffset: calc(440px - (440px * 50) / 100);
+							stroke: #d9e021;
+						}
+						}
+					  }
+					}
+				}
+		
+				&:nth-child(3) {
+					.card {
+					  svg {
+						circle {
+						  &:nth-child(2) {
+							stroke-dashoffset: calc(440px - (440px * 40) / 100);
+							stroke: #ed1e79;
+						  }
+						}
+					  }
+					}
+				}
+				&:nth-child(4) {
+					.card {
+					  svg {
+						circle {
+						  &:nth-child(2) {
+							stroke-dashoffset: calc(440px - (440px * 65) / 100);
+							stroke: #00ff1e;
+						  }
+						}
+					  }
+					}
+				}
+			}
+		}
+		&:nth-child(2) {
+			.col-md-3{
+				margin-right: auto;
+				margin-left: auto;
+				&:nth-child(1) {
+				.card {
+					svg {
+					  circle {
+						&:nth-child(2) {
+						  stroke-dashoffset: calc(440px - (440px * 35) / 100);
+						  stroke: #ff3c00;
+						}
+					  }
+					}
+				  }
+				}
+				
+				&:nth-child(2) {
+				.card {			
+					  svg {
+						circle {
+						&:nth-child(2) {
+							stroke-dashoffset: calc(440px - (440px * 70) / 100);
+							stroke: #75281b;
+						}
+						}
+					  }
+					}
+				}
+		
+				&:nth-child(3) {
+					.card {
+					  svg {
+						circle {
+						  &:nth-child(2) {
+							stroke-dashoffset: calc(440px - (440px * 30) / 100);
+							stroke: #0f00b6;
+						  }
+						}
+					  }
+					}
+				}
+				&:nth-child(4) {
+					.card {
+					  svg {
+						circle {
+						  &:nth-child(2) {
+							stroke-dashoffset: calc(440px - (440px * 25) / 100);
+							stroke: #c300ff;
+						  }
+						}
+					  }
+					}
+				}
+			}
+		}
+	}
+  }
 
 #interests .left { float: left; }
 #interests .right { float: right; }
@@ -542,7 +867,7 @@ figure.effect:hover p {
     width: 50%; /* Making auto-sizable width */
     height: auto; /* Making auto-sizable height */
     padding: 5px 30px 5px 30px; /* Making space around letters */
-    font-size: 18px; /* Changing font size */
+    // font-size: 18px; /* Changing font size */
 }
 
   .words {
@@ -999,6 +1324,18 @@ figure.effect:hover p {
 
 // @media queries
 
+// .projectBack {
+// 	background-image: url(images/graySquares.jpg);
+// 	background-repeat: no-repeat;
+// 	background-position: center center;
+// 	height: 100%;
+// 	width: 100%;
+// 	top: 0px;
+// 	left: 0px;
+// 	position: fixed;
+// 	//will-change: transform;
+// 	z-index: -1;
+// }
 
 @media (max-width: 1200px) { 
 	#interests .interest-content { padding: 20px 0px; }
@@ -1040,6 +1377,17 @@ figure.effect:hover p {
 	#interests > * { text-align: center; }
 	#interests img { width: 50%; height: auto; float: none !important; } 
 	#interests .interest-content { padding: 20px 0px; }
+
+	#abilities .card {
+		height: 250px;
+		width: 200px;
+		left: 50%;
+		transform: translate(-50%);
+	}
+
+	// #abilities .card circle {
+		
+	// }	
 	
 	#contact { padding-bottom: 60px; }
 	#contact a .icon { float: left; margin-right: 10px; }
@@ -1085,7 +1433,13 @@ figure.effect:hover p {
 		transition: right 0.8s cubic-bezier(1,0,0,1);
 		width: 50%;
 		right: -50%;
+		// font-size: 200px;
 	}
+
+	.nav-link {
+		font-size: 17px;
+	}
+	
 
 	.change {
 		right: 0;
@@ -1104,6 +1458,15 @@ figure.effect:hover p {
 	.wordAtt {
 		width: 0px;
 	}
+
+	.typewriterText{
+		font-size: 1.5vw; 
+		text-align: center; 
+		margin-left: auto;
+		margin-right: auto; 
+		margin-top: 50px;
+	}
+	// NO WOK ^
 }    
 
 @media only screen and (orientation: portrait) and (max-width: 767px)  {
