new navbar animation

--- a/view/style.css
+++ b/view/style.css
@@ -2558,20 +2558,12 @@ figure.effect:hover p {
 
 @media only screen and (orientation: portrait) and (max-width: 767px) {
   .jumbotron {
-    -webkit-background-size: auto 150%;
+    -webkit-background-size: auto 100%;
     background-attachment: scroll;
   }
   .projectBack {
-    position: relative;
-    overflow: hidden;
-  }
-  .projectBack::before {
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    position: fixed;
-    will-change: transform;
-    z-index: -1;
+    -webkit-background-size: auto 100%;
+    background-attachment: scroll;
   }
 }
 
@@ -2591,7 +2583,7 @@ figure.effect:hover p {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    position: fixed;
+    position: scroll;
     will-change: transform;
     z-index: -1;
   }
